brainwave.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap");

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {
  font-family: "Montserrat", sans-serif;
  margin: 0 auto;
}
a {
  text-decoration: none;
}

.hero-section {
  background-image: url("./images/Bitmap.svg");
}
.nav-ctn {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 20px;
}

.nav-ctn > span {
  font-weight: 700;
  font-size: 20px;
}

nav ul {
  display: none;
}

.hero-content {
  width: 100%;
  margin: 0 auto;
}

.hero-left h2 {
  font-size: 40px;
  width: 80%;
  margin: 30px auto;
  text-align: center;
}

.hero-left p {
  font-size: 20px;
  width: 70%;
  margin: 30px auto;
  color: #161c2d;
  opacity: 70%;
}

.hero-left button {
  display: block;
  font-size: 17px;
  background: #473bf0;
  width: 80%;
  height: 50px;
  margin: 0 auto;
  border-radius: 8px;
  font-size: 20px;
  border: none;
  margin-bottom: 30px;
}

.hero-left button a {
  color: white;
  font-weight: 700;
}

.hero-left small {
  display: flex;
  align-items: center;
  justify-content: center;
  font-weight: 700;
  font-size: 14px;
}

.hero-right img {
  margin: 30px 30px 0 30px;
  width: 80%;
}

.hero-footer {
  display: block;
  background-color: #161c2d;
  font-size: 12px;
  font-weight: 400;
  color: white;
  text-align: center;
  padding: 10px 0;
  line-height: 1.3rem;
}

.hero-footer a {
  text-decoration: underline;
  color: white;
}

.advice-ctn h2 {
  font-size: 45px;
  text-align: center;
  margin: 30px;
}

.advice-ctn p {
  font-size: 20px;
  text-align: center;
}

.advice button {
  display: block;
  font-size: 17px;
  background: #473bf0;
  width: 80%;
  height: 50px;
  margin: 0 auto;
  border-radius: 8px;
  font-size: 20px;
  border: none;
  margin: 30px;
}
.advice button a {
  color: white;
  font-weight: 700;
}

.advice img {
  width: 80%;
  margin: 0 30px;
}

.ratings {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  padding: 20px;
  gap: 20px;
  width: 90%;
  margin: 20px;
}

.services {
  margin: 0 auto;
  background-color: #f4f7fa;
}

.services h1 {
  width: 55%;
  margin: 0 auto;
  padding: 20px 0;
  text-align: center;
}

.services > p {
  font-size: 20px;
  margin: 0 20px;
}

.service-grid div {
  width: 80%;
  padding: 20px 0;
  margin: 0 auto;
  text-align: center;
  color: #161c2d;
}

.service-grid img {
  margin: 0 auto;
  width: 100%;
  margin: 20px 0;
}

.service-grid h3 {
  font-size: 20px;
}
.service-grid p {
  font-size: 20px;
}
.service-grid button {
  gap: 10px;
  width: 80%;
  height: 50px;
  border: transparent;
  border-radius: 30px;
  margin: 20px 0;
}
.service-grid button a {
  color: #473bf0;
  font-size: 17px;
  font-weight: 700;
}
.service-grid svg {
  display: none;
}

.top-choose {
  position: relative;
  margin: 20px;
  height: 950px;
}

.oval {
  position: absolute;
  z-index: -1;
  left: 0px;
  top: 100px;
}
.man {
  position: absolute;
  z-index: 1;
}

.choose-texts {
  position: absolute;
  z-index: 2;
  top: 50vh;
  background-color: white;
  width: 100vw;
}

.choose-texts h2 {
  font-size: 30px;
  width: 60%;
  margin: 0 auto;
  text-align: center;
}

.choose-texts p {
  font-size: 20px;
  padding: 10px;
}

.bold {
  font-weight: bold;
}

.bold svg {
  color: #473bf0;
  margin: 0 10px;
}

.bottom-choose {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-image:linear-gradient(
      rgba(22, 28, 45, 0.5),
      rgba(22, 28, 45, 0.5)
    ), url(./images/BG.png);
  background-size: auto;
  background-repeat: no-repeat;
  color: #fff;
  padding: 50px;
}

.play {
  width: 50px;
}
.bottom-choose h2 {
  font-size: 20px;
  margin: 20px 0;
}

.bottom-choose p {
  opacity: 65%;
}
.about-us {
  margin: 50px 0 0 0;
}

.about-us > h2 {
  color: #161c2d;
  font-size: 35px;
  text-align: center;
  width: 80%;
  margin: 0 auto;
}

.about-us > p {
  color: #161c2d;
  opacity: 70%;
}

.about-us p {
  font-size: 20px;
  text-align: center;
  font-weight: 400;
  color: #161c2d;
}

.about-us img {
  display: block;
  margin: 30px auto;
  width: 30%;
}

.about-us span {
  display: block;
  font-weight: 700;
  margin: 10px;
}

.about-footer {
  background-color: #68d585;
  color: white;
  margin-top: 20px;
}
.about-footer h2 {
  text-align: center;
  font-size: 30px;
  font-weight: 400;
}

.about-footer button {
  background: whitesmoke;
  width: 80%;
  height: 50px;
  border-radius: 8px;
  margin: 10px 30px;
  border: transparent;
}

.about-footer button a {
  color: #161c2d;
  font-weight: 700;
  font-size: 17px;
}

.page-footer {
  background-color: #161c2d;
  color: #fff;
  width: 100%;
  margin: 0 auto;
  padding: 30px;
  letter-spacing: 1.5px;
  font-family: "Rubik";
}

.page-footer a {
  color: white;
}

.page-footer ul {
  list-style: none;
  padding: 20px 0;
}

.page-footer h3,
.page-footer > p {
  color: #fff;
  opacity: 65%;
}

.page-footer h2 {
  font-size: 40px;
  margin-bottom: 30px;
}

.page-footer > p {
  margin: 30px 0;
  font-size: larger;
}

.page-footer h3 {
  font-size: larger;
}

.page-footer li {
  font-size: larger;
}

.page-footer img {
  margin: 20px;
}
/* 
@media (min-width: 768px) {


} */

@media (min-width: 992px) {
  .hero-ctn {
    margin: 30px;
  }

  .hero-ctn span {
    font-family: "Rubik", sans-serif;
    font-size: 28px;
  }

  .menu {
    display: none;
  }
  nav ul {
    display: flex;
    list-style: none;
    gap: 20px;
    font-weight: 700;
    font-size: 16px;
    align-items: center;
  }

  nav ul a {
    text-decoration: none;
    color: #161c2d;
  }

  .nav-ctn button {
    font-size: 17px;
    background: #473bf0;
    width: 168px;
    height: 30px;
    color: white;
    border-radius: 8px;
    font-weight: 700;
    font-size: 17px;
    border: none;
  }

  .hero-content {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 80%;
  }

  .hero-left h2 {
    font-size: 48px;
    font-weight: 700;
    width: 80%;
    text-align: left;
    margin: 0;
  }
  .hero-left p {
    width: 63%;
    font-size: 19px;
    font-weight: 400;
    text-align: left;
    flex-direction: start;
    margin: 20px 0;
  }

  .hero-left button {
    font-size: 17px;
    width: 200px;
    margin: 0;
  }

  .hero-left small {
    display: block;
    margin: 20px;
  }

  .hero-right img {
    width: 100%;
    margin: 0 50px;
    padding: 0;
  }

  .hero-footer {
    margin: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 30px;
    font-size: 17px;
  }

  .advice {
    display: flex;
    margin: 100px;
  }

  .advice-ctn {
    margin: 50px 20px;
  }

  .advice-ctn h2 {
    font-size: 32px;
    font-weight: 700;
    width: 80%;
    text-align: left;
    margin: 20px 0;
  }
  .advice-ctn p {
    font-size: 19px;
    width: 80%;
    text-align: left;
    margin: 20px 0;
  }

  .advice-ctn button {
    font-size: 17px;
    width: 200px;
    margin: 0;
  }

  .advice img {
    width: fit-content;
    margin: 0;
    padding: 0;
  }

  .ratings {
    display: block;
    margin-left: 50px;
  }

  .ratings h2 {
    font-size: 32px;
    font-weight: 700;
  }

  .ratings p {
    font-size: 19px;
    font-weight: 400;
    padding: 10px 0;
    width: 70%;
    line-height: 32px;
  }
  .services {
    padding: 60px 0;
  }

  .services h1 {
    font-size: 36px;
    width: 33%;
    padding: 10px;
  }
  .services p {
    font-size: 19px;
    font-weight: 400;
    width: 40%;
    margin: 0 auto;
    text-align: center;
  }
  .service-grid {
    display: grid;
    grid-template-columns: repeat(3, 32vw);
    margin: 0 40px;
  }

  .service-grid p,
  .service-grid h3 {
    width: 100%;
    text-align: left;
  }

  .service-grid button {
    display: flex;
    align-items: center;
    background: none;
    text-align: left;
    line-height: 32px;
    margin: 0;
    width: 100%;
  }
  .service-grid svg {
    display: block;
  }
  .choose {
    margin: 80px 0;
    position: relative;
    height: 1100px;
  }

  .top-choose {
    /* background-color: rebeccapurple; */
    width: 80vw;
    margin: 0 auto;
    display: flex;
  }

  .man {
    height: 100%;
  }

  .choose-texts {
    position: none;
    top: 10vh;
    right: 0px;
    width: 40vw;
  }

  .choose-texts h2 {
    font-size: 36px;
    text-align: left;
    color: #161c2d;
    margin: 0;
    padding: 0;
  }

  .choose-texts #first {
    width: 25vw;
    font-size: 19px;
    opacity: 70%;
    text-align: left;
    color: #161c2d;
    padding: 30px 0;
  }

  .bold {
    display: grid;
    grid-template-columns: 50% 50%;
    gap: 10px;
  }

  .bottom-choose {
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
    top: 610px;
    width: 100vw;
    z-index: 2;
    background-size: cover;
    height: 500px;
  }

  .bottom-choose h2{
    font-size: 36px;
    font-weight: 700;
  }

  .bottom-choose p{
    font-weight: 400;
    font-size: 19px;
    width: 600px;
    text-align: center;
  }

  .about-us h2 {
    font-size: 36px;
    font-weight: 700;
    text-align: center;
    width: 80%;
    margin: 0 auto;
    padding: 20px 0;
  }

  .about-us > p {
    font-size: 19px;
    text-align: center;
    width: 40%;
    font-weight: 400;
    margin: 0 auto;
  }

  .about-us-grid {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 10px;
    margin: 0 auto;
    width: 80%;
  }

  .about-us-grid div {
    padding: 0px;
    border: 1px solid #e7e9ed;
    border-radius: 10px;
    width: 100%;
    margin: 50px;
    padding: 10px;
  }

  .about-us-grid p {
    text-align: left;
    font-size: 21px;
    font-weight: 400;
    width: 60%;
    padding: 10px;
  }

  .about-us img {
    margin: 30px 10px;
    width: 19%;
  }

  .about-footer {
    background-color: #68d585;
    color: white;
    display: flex;
    flex-direction: row;
    gap: 20px;
    width: 100%;
    justify-content: center;
    align-items: center;
    padding: 30px;
  }
  .about-footer > h2 {
    font-size: 32px;
    font-weight: 700;
    width: auto;
    margin: 0;
    /* background-color: blue; */
  }

  .about-footer button {
    background: whitesmoke;
    width: 15rem;
    height: 50px;
    border-radius: 10px;
    color: black;
    border: transparent;
  }

  .page-footer {
    display: flex;
    gap: 0px;
    justify-content: space-evenly;
    padding: 8%;
    letter-spacing: normal;
    width: 100%;
  }

  .page-footer ul {
    list-style: none;
    font-size: 15px;
  }

  .page-footer h3,
  .footer-para {
    color: #fff;
    opacity: 65%;
  }

  .page-footer h2 {
    font-size: 28px;
  }

  .footer-para {
    width: 50%;
  }

  .page-footer h3 {
    font-size: 15px;
    margin: 0;
    padding: 0;
  }

  .page-footer li {
    font-size: 15px;
    width: 100px;
  }
}

